Fix some links and spacing

--- a/www/res/style.css
+++ b/www/res/style.css
@@ -26,6 +26,7 @@ ul.visible a {
 #container {
   margin: 0 auto;
   width: 900px;
+  padding-right: 20px;
 }
 #nav-container {
   display:block;
